task5/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: spring-chat-service
          servicePort: 80
      - path: /login
        pathType: Prefix
        backend:
          serviceName: spring-login-service
          servicePort: 80
      - path: /profile
        pathType: Prefix
        backend:
          serviceName: spring-profile-service
          servicePort: 80
